# canny-edge-turtle

./: CMakeLists.txt  README.md  idx.xml  img-canny-edge.cpp  img-canny-point-turtle.py
